Top level variables may now be declared global, which allows them to be referenced anywhere in the program, not just in the top level scope.
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2981 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+(06/25/09)
+*** 'global' keyword to allow top level declarations to be visible in all
+    scopes.
+
 (05/17/09)
 *** Allow wrapper parameters to be specific in a file rather than on the
     commandline. This trades commandline length for an extra file to stage-in
