--- a/tests/language/working-base/014-mapper.xml
+++ b/tests/language/working-base/014-mapper.xml
@@ -9,7 +9,7 @@
      		<typestructure></typestructure>
      	</type>   
   </types>  
-  <variable name="v" type="myfile">
+  <variable name="v" type="myfile" isGlobal="false">
     <mapping descriptor="simple_mapper">
       <param name="pattern"><stringConstant>*</stringConstant></param>
     </mapping>
