--- a/tests/language/working-base/021-procedure-invocation-assign-no-param.xml
+++ b/tests/language/working-base/021-procedure-invocation-assign-no-param.xml
@@ -12,7 +12,7 @@
      <integerConstant>7</integerConstant>
     </assign>
   </procedure>
-  <variable name="hw1" type="int" xsi:nil="true"/>
+  <variable name="hw1" type="int" isGlobal="false" xsi:nil="true"/>
   <call proc="num" src="line 4">
     <output><variableReference>hw1</variableReference></output>
   </call>
