--- a/tests/language/working-base/047-LQCD.xml
+++ b/tests/language/working-base/047-LQCD.xml
@@ -256,7 +256,7 @@
           <variableReference>Q2</variableReference></function>  </application>
     </binding>
   </procedure>
-  <variable name="confList" type="string[]" xsi:nil="true"/>
+  <variable name="confList" type="string[]" isGlobal="false" xsi:nil="true"/>
   <assign src="line 54">
    <variableReference>confList</variableReference>
 
@@ -265,22 +265,22 @@
      </array>
 
   </assign>
-  <variable name="kappaQ" type="float" xsi:nil="true"/>
+  <variable name="kappaQ" type="float" isGlobal="false" xsi:nil="true"/>
   <assign src="line 55">
    <variableReference>kappaQ</variableReference>
    <floatConstant>0.127</floatConstant>
   </assign>
-  <variable name="cSW" type="float" xsi:nil="true"/>
+  <variable name="cSW" type="float" isGlobal="false" xsi:nil="true"/>
   <assign src="line 57">
    <variableReference>cSW</variableReference>
    <floatConstant>1.75</floatConstant>
   </assign>
-  <variable name="mass" type="string" xsi:nil="true"/>
+  <variable name="mass" type="string" isGlobal="false" xsi:nil="true"/>
   <assign src="line 58">
    <variableReference>mass</variableReference>
    <stringConstant>0.005,0.007,0.01,0.02,0.03</stringConstant>
   </assign>
-  <variable name="fn" type="string[]" xsi:nil="true"/>
+  <variable name="fn" type="string[]" isGlobal="false" xsi:nil="true"/>
   <assign src="line 62">
    <variableReference>fn</variableReference>
 
@@ -289,22 +289,22 @@
      </array>
 
   </assign>
-  <variable name="conflist" type="int[]" xsi:nil="true"/>
+  <variable name="conflist" type="int[]" isGlobal="false" xsi:nil="true"/>
   <foreach var="config"  indexVar="i" src="line 64">
   <in><variableReference>conflist</variableReference></in>
-  <body><variable name="source" type="string" xsi:nil="true"/>
+  <body><variable name="source" type="string" isGlobal="false" xsi:nil="true"/>
     <assign src="line 68">
      <variableReference>source</variableReference>
      <stringConstant>local,0,0,0,0</stringConstant>
     </assign>
-    <variable name="template" type="file"><file name="foo"/></variable>
-    <variable name="gauge" type="file" xsi:nil="true"/>
+    <variable name="template" type="file" isGlobal="false"><file name="foo"/></variable>
+    <variable name="gauge" type="file" isGlobal="false" xsi:nil="true"/>
     <call proc="stageIn" src="line 70">
       <output><variableReference>gauge</variableReference></output>
       <input><variableReference>template</variableReference></input>
       <input><variableReference>config</variableReference></input>
     </call>
-    <variable name="stags" type="file[]">
+    <variable name="stags" type="file[]" isGlobal="false">
       <mapping descriptor="fixed_array_mapper">
         <param name="files"><arraySubscript>
          <variableReference>fn</variableReference>
@@ -318,7 +318,7 @@
       <input><variableReference>mass</variableReference></input>
       <input><variableReference>source</variableReference></input>
     </call>
-    <variable name="stagTar" type="file">
+    <variable name="stagTar" type="file" isGlobal="false">
       <mapping descriptor="simple_mapper">
         <param name="suffix"><stringConstant>.tar</stringConstant></param>
       </mapping>
@@ -328,7 +328,7 @@
       <input><variableReference>mass</variableReference></input>
       <input><variableReference>stags</variableReference></input>
     </call>
-    <variable name="clover0" type="file" xsi:nil="true"/>
+    <variable name="clover0" type="file" isGlobal="false" xsi:nil="true"/>
     <call proc="cloverSolve" src="line 81">
       <output><variableReference>clover0</variableReference></output>
       <input><variableReference>kappaQ</variableReference></input>
@@ -336,22 +336,22 @@
       <input><variableReference>gauge</variableReference></input>
       <input><variableReference>source</variableReference></input>
     </call>
-    <variable name="q0" type="file" xsi:nil="true"/>
+    <variable name="q0" type="file" isGlobal="false" xsi:nil="true"/>
     <call proc="cvt12x12" src="line 82">
       <output><variableReference>q0</variableReference></output>
       <input><variableReference>clover0</variableReference></input>
     </call>
-    <variable name="cvtArch0" type="file" xsi:nil="true"/>
+    <variable name="cvtArch0" type="file" isGlobal="false" xsi:nil="true"/>
     <call proc="archive" src="line 83">
       <output><variableReference>cvtArch0</variableReference></output>
       <input><variableReference>q0</variableReference></input>
     </call>
-    <variable name="source1" type="string" xsi:nil="true"/>
+    <variable name="source1" type="string" isGlobal="false" xsi:nil="true"/>
     <assign src="line 86">
      <variableReference>source1</variableReference>
      <stringConstant>wavefunction,0,1S</stringConstant>
     </assign>
-    <variable name="clover1" type="file" xsi:nil="true"/>
+    <variable name="clover1" type="file" isGlobal="false" xsi:nil="true"/>
     <call proc="cloverSolve" src="line 86">
       <output><variableReference>clover1</variableReference></output>
       <input><variableReference>kappaQ</variableReference></input>
@@ -359,22 +359,22 @@
       <input><variableReference>gauge</variableReference></input>
       <input><variableReference>source1</variableReference></input>
     </call>
-    <variable name="q1" type="file" xsi:nil="true"/>
+    <variable name="q1" type="file" isGlobal="false" xsi:nil="true"/>
     <call proc="cvt12x12" src="line 87">
       <output><variableReference>q1</variableReference></output>
       <input><variableReference>clover1</variableReference></input>
     </call>
-    <variable name="cvtArch1" type="file" xsi:nil="true"/>
+    <variable name="cvtArch1" type="file" isGlobal="false" xsi:nil="true"/>
     <call proc="archive" src="line 88">
       <output><variableReference>cvtArch1</variableReference></output>
       <input><variableReference>q1</variableReference></input>
     </call>
-    <variable name="source2" type="string" xsi:nil="true"/>
+    <variable name="source2" type="string" isGlobal="false" xsi:nil="true"/>
     <assign src="line 91">
      <variableReference>source2</variableReference>
      <stringConstant>wavefunction,0,2S</stringConstant>
     </assign>
-    <variable name="clover2" type="file" xsi:nil="true"/>
+    <variable name="clover2" type="file" isGlobal="false" xsi:nil="true"/>
     <call proc="cloverSolve" src="line 91">
       <output><variableReference>clover2</variableReference></output>
       <input><variableReference>kappaQ</variableReference></input>
@@ -382,22 +382,22 @@
       <input><variableReference>gauge</variableReference></input>
       <input><variableReference>source2</variableReference></input>
     </call>
-    <variable name="q2" type="file" xsi:nil="true"/>
+    <variable name="q2" type="file" isGlobal="false" xsi:nil="true"/>
     <call proc="cvt12x12" src="line 92">
       <output><variableReference>q2</variableReference></output>
       <input><variableReference>clover2</variableReference></input>
     </call>
-    <variable name="cvtArch2" type="file" xsi:nil="true"/>
+    <variable name="cvtArch2" type="file" isGlobal="false" xsi:nil="true"/>
     <call proc="archive" src="line 93">
       <output><variableReference>cvtArch2</variableReference></output>
       <input><variableReference>q2</variableReference></input>
     </call>
-    <variable name="antiQ" type="file" xsi:nil="true"/>
+    <variable name="antiQ" type="file" isGlobal="false" xsi:nil="true"/>
     <assign src="line 96">
      <variableReference>antiQ</variableReference>
      <variableReference>q0</variableReference>
     </assign>
-    <variable name="pStdout" type="file" xsi:nil="true"/>
+    <variable name="pStdout" type="file" isGlobal="false" xsi:nil="true"/>
     <call proc="twoPtHH" src="line 96">
       <output><variableReference>pStdout</variableReference></output>
       <input><variableReference>gauge</variableReference></input>
@@ -408,7 +408,7 @@
     </call>
     <foreach var="stag"  src="line 97">
     <in><variableReference>stags</variableReference></in>
-    <body><variable name="sStdout" type="file" xsi:nil="true"/>
+    <body><variable name="sStdout" type="file" isGlobal="false" xsi:nil="true"/>
       <call proc="twoPtSH" src="line 98">
         <output><variableReference>sStdout</variableReference></output>
         <input><variableReference>gauge</variableReference></input>
