--- a/tests/language/working-base/procedurecall-assign-named-return-value.xml
+++ b/tests/language/working-base/procedurecall-assign-named-return-value.xml
@@ -17,7 +17,7 @@
      <variableReference>x</variableReference>
     </assign>
   </procedure>
-  <variable name="i" type="int" xsi:nil="true"/>
+  <variable name="i" type="int" isGlobal="false" xsi:nil="true"/>
   <call proc="f" src="line 5">
     <output bind="q"><variableReference>i</variableReference></output>
     <input><integerConstant>7</integerConstant></input>
