--- a/tests/language/working-base/q7.xml
+++ b/tests/language/working-base/q7.xml
@@ -27,12 +27,12 @@
           <variableReference>t</variableReference></function></stdout><variableReference>s</variableReference>  </application>
     </binding>
   </procedure>
-  <variable name="outputNames" type="string" xsi:nil="true"/>
+  <variable name="outputNames" type="string" isGlobal="false" xsi:nil="true"/>
   <assign src="line 11">
    <variableReference>outputNames</variableReference>
    <stringConstant>one two three</stringConstant>
   </assign>
-  <variable name="outputFiles" type="file[]">
+  <variable name="outputFiles" type="file[]" isGlobal="false">
     <mapping descriptor="array_mapper">
       <param name="files"><variableReference>outputNames</variableReference></param>
     </mapping>
