--- a/tests/language/working-base/009-foreach.xml
+++ b/tests/language/working-base/009-foreach.xml
@@ -17,10 +17,10 @@
      <variableReference>s</variableReference>
     </assign>
   </procedure>
-  <variable name="sa" type="int[]" xsi:nil="true"/>
+  <variable name="sa" type="int[]" isGlobal="false" xsi:nil="true"/>
   <foreach var="s"  indexVar="i" src="line 5">
   <in><variableReference>sa</variableReference></in>
-  <body><variable name="a" type="int" xsi:nil="true"/>
+  <body><variable name="a" type="int" isGlobal="false" xsi:nil="true"/>
     <call proc="num" src="line 5">
       <output><variableReference>a</variableReference></output>
       <input><variableReference>s</variableReference></input>
