--- a/tests/language/working-base/011-foreach.xml
+++ b/tests/language/working-base/011-foreach.xml
@@ -17,10 +17,10 @@
      <variableReference>i</variableReference>
     </assign>
   </procedure>
-  <variable name="zdata" type="int[]" xsi:nil="true"/>
+  <variable name="zdata" type="int[]" isGlobal="false" xsi:nil="true"/>
   <foreach var="s"  src="line 3">
   <in><variableReference>zdata</variableReference></in>
-  <body><variable name="a" type="int" xsi:nil="true"/>
+  <body><variable name="a" type="int" isGlobal="false" xsi:nil="true"/>
     <call proc="num" src="line 3">
       <output><variableReference>a</variableReference></output>
       <input><variableReference>s</variableReference></input>
