--- a/tests/language/working-base/03101-var-decl.xml
+++ b/tests/language/working-base/03101-var-decl.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="p" type="int[]" xsi:nil="true"/>
+  <variable name="p" type="int[]" isGlobal="false" xsi:nil="true"/>
   <assign src="line 2">
    <variableReference>p</variableReference>
 
