--- a/tests/language/working-base/0311-var-decl.xml
+++ b/tests/language/working-base/0311-var-decl.xml
@@ -1,18 +1,18 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="x" type="int" xsi:nil="true"/>
-  <variable name="y" type="int" xsi:nil="true"/>
+  <variable name="x" type="int" isGlobal="false" xsi:nil="true"/>
+  <variable name="y" type="int" isGlobal="false" xsi:nil="true"/>
   <assign src="line 2">
    <variableReference>y</variableReference>
    <integerConstant>2</integerConstant>
   </assign>
-  <variable name="s" type="string" xsi:nil="true"/>
+  <variable name="s" type="string" isGlobal="false" xsi:nil="true"/>
   <assign src="line 3">
    <variableReference>s</variableReference>
    <stringConstant>hello</stringConstant>
   </assign>
-  <variable name="f" type="float[]" xsi:nil="true"/>
+  <variable name="f" type="float[]" isGlobal="false" xsi:nil="true"/>
   <assign src="line 4">
    <variableReference>f</variableReference>
 
@@ -21,7 +21,7 @@
      </array>
 
   </assign>
-  <variable name="p" type="int[]" xsi:nil="true"/>
+  <variable name="p" type="int[]" isGlobal="false" xsi:nil="true"/>
   <assign src="line 6">
    <variableReference>p</variableReference>
 
