--- a/tests/language/working-base/034-whitespace.xml
+++ b/tests/language/working-base/034-whitespace.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="i" type="int" xsi:nil="true"/>
+  <variable name="i" type="int" isGlobal="false" xsi:nil="true"/>
   <assign src="line 4">
    <variableReference>i</variableReference>
    <arith op="*">
