--- a/tests/language/working-base/0341-whitespace.xml
+++ b/tests/language/working-base/0341-whitespace.xml
@@ -1,9 +1,9 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="a" type="int" xsi:nil="true"/>
-  <variable name="b" type="int" xsi:nil="true"/>
-  <variable name="i" type="int" xsi:nil="true"/>
+  <variable name="a" type="int" isGlobal="false" xsi:nil="true"/>
+  <variable name="b" type="int" isGlobal="false" xsi:nil="true"/>
+  <variable name="i" type="int" isGlobal="false" xsi:nil="true"/>
   <assign src="line 26">
    <variableReference>i</variableReference>
    <arith op="*">
