--- a/tests/language/working-base/045-expr-in-array.xml
+++ b/tests/language/working-base/045-expr-in-array.xml
@@ -1,9 +1,9 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="subjectNo" type="int[]" xsi:nil="true"/>
-  <variable name="trialTypes" type="int[]" xsi:nil="true"/>
-  <variable name="outputs" type="int[]" xsi:nil="true"/>
+  <variable name="subjectNo" type="int[]" isGlobal="false" xsi:nil="true"/>
+  <variable name="trialTypes" type="int[]" isGlobal="false" xsi:nil="true"/>
+  <variable name="outputs" type="int[]" isGlobal="false" xsi:nil="true"/>
   <foreach var="t"  indexVar="j" src="line 8">
   <in><variableReference>subjectNo</variableReference></in>
   <body><foreach var="s"  indexVar="i" src="line 9">
