--- a/tests/language/working-base/case3.xml
+++ b/tests/language/working-base/case3.xml
@@ -23,23 +23,23 @@
     name="i" type="int"
 
      xsi:nil="true" />
-    <variable name="f" type="int" xsi:nil="true"/>
+    <variable name="f" type="int" isGlobal="false" xsi:nil="true"/>
     <assign src="line 4">
      <variableReference>f</variableReference>
      <variableReference>i</variableReference>
     </assign>
   </procedure>
-  <variable name="d" type="int" xsi:nil="true"/>
+  <variable name="d" type="int" isGlobal="false" xsi:nil="true"/>
   <assign src="line 7">
    <variableReference>d</variableReference>
    <integerConstant>99</integerConstant>
   </assign>
-  <variable name="g" type="int" xsi:nil="true"/>
-  <variable name="j" type="int" xsi:nil="true"/>
-  <variable name="t" type="int" xsi:nil="true"/>
-  <variable name="uuu" type="int" xsi:nil="true"/>
-  <variable name="e" type="int" xsi:nil="true"/>
-  <variable name="s" type="string" xsi:nil="true"/>
+  <variable name="g" type="int" isGlobal="false" xsi:nil="true"/>
+  <variable name="j" type="int" isGlobal="false" xsi:nil="true"/>
+  <variable name="t" type="int" isGlobal="false" xsi:nil="true"/>
+  <variable name="uuu" type="int" isGlobal="false" xsi:nil="true"/>
+  <variable name="e" type="int" isGlobal="false" xsi:nil="true"/>
+  <variable name="s" type="string" isGlobal="false" xsi:nil="true"/>
   <switch>
     <variableReference>d</variableReference>
     <case>
