--- a/tests/language/working-base/file_counter.xml
+++ b/tests/language/working-base/file_counter.xml
@@ -46,8 +46,8 @@
           <variableReference>c</variableReference></function></stdout>  </application>
     </binding>
   </procedure>
-  <variable name="list" type="file" xsi:nil="true"/>
-  <variable name="count" type="file" xsi:nil="true"/>
+  <variable name="list" type="file" isGlobal="false" xsi:nil="true"/>
+  <variable name="count" type="file" isGlobal="false" xsi:nil="true"/>
   <call proc="ls" src="line 19">
     <output><variableReference>list</variableReference></output>
     <input><stringConstant>*.txt</stringConstant></input>
