--- a/tests/language/working-base/operators.xml
+++ b/tests/language/working-base/operators.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="a" type="boolean" xsi:nil="true"/>
+  <variable name="a" type="boolean" isGlobal="false" xsi:nil="true"/>
   <assign src="line 4">
    <variableReference>a</variableReference>
    <cond op="!=">
@@ -9,7 +9,7 @@
      <integerConstant>2</integerConstant>
    </cond>
   </assign>
-  <variable name="b" type="int" xsi:nil="true"/>
+  <variable name="b" type="int" isGlobal="false" xsi:nil="true"/>
   <assign src="line 6">
    <variableReference>b</variableReference>
    <integerConstant>3</integerConstant>
