--- a/tests/language/working-base/procedurecall-assign-1.xml
+++ b/tests/language/working-base/procedurecall-assign-1.xml
@@ -17,7 +17,7 @@
      <variableReference>i</variableReference>
     </assign>
   </procedure>
-  <variable name="i" type="int" xsi:nil="true"/>
+  <variable name="i" type="int" isGlobal="false" xsi:nil="true"/>
   <call proc="f" src="line 4">
     <output><variableReference>i</variableReference></output>
     <input><integerConstant>7</integerConstant></input>
