--- a/tests/language/working-base/q14.xml
+++ b/tests/language/working-base/q14.xml
@@ -51,8 +51,8 @@
           <variableReference>f</variableReference></function>  </application>
     </binding>
   </procedure>
-  <variable name="outfile" type="messagefile" xsi:nil="true"/>
-  <variable name="c" type="countfile"><file name="count14.txt"/></variable>
+  <variable name="outfile" type="messagefile" isGlobal="false" xsi:nil="true"/>
+  <variable name="c" type="countfile" isGlobal="false"><file name="count14.txt"/></variable>
   <call proc="greeting" src="line 19">
     <output><variableReference>outfile</variableReference></output>
     <input><stringConstant>hello from Swift</stringConstant></input>
