--- a/tests/language/working-base/q3.xml
+++ b/tests/language/working-base/q3.xml
@@ -30,7 +30,7 @@
           <variableReference>t</variableReference></function></stdout><variableReference>s</variableReference>  </application>
     </binding>
   </procedure>
-  <variable name="hw" type="file" xsi:nil="true"/>
+  <variable name="hw" type="file" isGlobal="false" xsi:nil="true"/>
   <call proc="echo" src="line 9">
     <output><variableReference>hw</variableReference></output>
   </call>
