--- a/tests/language/working-base/range.xml
+++ b/tests/language/working-base/range.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="nums" type="int[]" xsi:nil="true"/>
+  <variable name="nums" type="int[]" isGlobal="false" xsi:nil="true"/>
   <assign src="line 3">
    <variableReference>nums</variableReference>
 
