--- a/tests/language/working-base/underscore-in-id.xml
+++ b/tests/language/working-base/underscore-in-id.xml
@@ -1,7 +1,7 @@
 <program xmlns="http://ci.uchicago.edu/swift/2009/02/swiftscript"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns:xs="http://www.w3.org/2001/XMLSchema">
-  <variable name="a_b_c" type="int" xsi:nil="true"/>
+  <variable name="a_b_c" type="int" isGlobal="false" xsi:nil="true"/>
   <assign src="line 3">
    <variableReference>a_b_c</variableReference>
    <integerConstant>3</integerConstant>
