make condor provider treat held jobs as failed when holdIsFailure attribute is set to true.
incorrect recognition of held state is fixed.

git-svn-id: https://svn.code.sf.net/p/cogkit/svn/trunk/current/src@2410 5b74d2a0-fa0e-0410-85ed-ffba77ec0bde

--- a/cog/modules/provider-localscheduler/CHANGES.txt
+++ b/cog/modules/provider-localscheduler/CHANGES.txt
@@ -1,3 +1,8 @@
+(06/25/09)
+
+*** Held condor jobs are treated as failures if the heldIsFailure attribute
+    is set to true.
+
 (04/15/09)
 
 *** Support for Condor-G submissions, by setting a job specification attribute
