New procedure writeData to write data structures to a file.
This should be the inverse of readData: readData(writeData(X)) == X
and, modulo formatting and assuming data is in the correct format,
writeData(readData(X)) == X

The initial use for this is to write out long lists of filenames into a disk
file, rather than passing them on the command line.

git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2994 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+(07/01/09)
+*** New writeData procedure which writes data structures to files in the same
+    format as used by readData.
+
 (06/30/09)
 *** New parameter -condor-g for swift-osg-ress-site-catalog which causes
     sites files to be generate which will use a local condor-g installation
