import directive to import swiftscript code from other files
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@2996 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+(07/03/09)
+*** New import keyword which allows other SwiftScript source files to be
+    imported.
+
 (07/01/09)
 *** New writeData procedure which writes data structures to files in the same
     format as used by readData.
